[package]
name = "signal-hook"
version = "0.1.11"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Unix signal handling"
documentation = "https://docs.rs/signal-hook"
repository = "https://github.com/vorner/signal-hook"
readme = "README.md"
keywords = ["signal", "unix", "daemon"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/signal-hook" }
maintenance = { status = "actively-developed" }

[features]
mio-support = ["mio"]
tokio-support = ["futures-preview", "mio-support", "tokio-net"]

[workspace]
members = [
    "./",
    "signal-hook-registry",
]

[dependencies]
libc = "~0.2"
futures-preview = { version = "0.3.0-alpha.19", optional = true }
mio = { version = "~0.6", optional = true }
signal-hook-registry = { version = "~1", path = "signal-hook-registry" }
tokio-net = { version = "0.2.0-alpha", optional = true }

[dev-dependencies]
version-sync = "~0.8"
tokio = "0.2.0-alpha.6"

[package.metadata.docs.rs]
all-features = true
