[package]
name = "signal-hook"
version = "0.4.1"
authors = [
    "Michal 'vorner' Vaner <vorner@vorner.cz>",
    "Thomas Himmelstoss <thimm@posteo.de>",
]
description = "Unix signal handling"
documentation = "https://docs.rs/signal-hook"
repository = "https://github.com/vorner/signal-hook"
readme = "README.md"
keywords = ["signal", "unix", "daemon"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.66"
include.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[features]
channel = []
default = ["channel", "iterator"]
iterator = ["channel"]
# TODO: Unify them on the next breaking release.
extended-siginfo = ["channel", "iterator", "extended-siginfo-raw"]
extended-siginfo-raw = ["cc"]

[workspace]
members = [
    "./",
    "signal-hook-registry",
    "signal-hook-tokio",
    "signal-hook-mio",
    "signal-hook-async-std",
    "serial_test",
]

[workspace.package]
include = ["CHANGELOG.md", "LICENSE-MIT", "LICENSE-APACHE", "README.md", "build.rs", "src/**/*.rs", "tests/**/*.rs", "examples/**/*.rs"]

[dependencies]
libc = "^0.2"
signal-hook-registry = { version = "^1.4", path = "signal-hook-registry" }

[dev-dependencies]
serial_test = { path = "./serial_test" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
cc = { version = "^1", optional = true }
