[package]
name = "signal-hook-tokio"
version = "0.2.0"
authors = [
    "Michal 'vorner' Vaner <vorner@vorner.cz>",
    "Thomas Himmelstoss <thimm@posteo.de>",
]

description = "Tokio support for signal-hook"
documentation = "https://docs.rs/signal-hook-tokio"
readme = "README.md"
repository = "https://github.com/vorner/signal-hook"
keywords = ["signal", "unix", "tokio"]
license = "Apache-2.0/MIT"

edition = "2018"

[badges]
travis-ci = { repository = "vorner/signal-hook" }
maintenance = { status = "actively-developed" }

[features]
support-v0_1 = ["tokio-0_1", "futures-0_1"]
support-v0_3 = ["tokio-0_3", "futures-0_3"]

[dependencies]
libc = "~0.2"
signal-hook = { version = "~0.3", path = ".." }
tokio-0_1 = { package = "tokio", version = "~0.1", optional = true }
futures-0_1 = { package = "futures", version = "~0.1", optional = true }
tokio-0_3 = { package = "tokio", version = "~0.3", features = ["net"], optional = true }
futures-0_3 = { package = "futures", version = "~0.3", optional = true }

[dev-dependencies]
tokio-0_3 = { package = "tokio", version = "~0.3", features = ["full"]}
serial_test = "~0.5"

[package.metadata.docs.rs]
all-features = true
